# grok-overlay

./: .gitignore  package-lock.json  package.json  readme.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: index.html  settings.html  settings.js  styles.css  titlebar.html
