[package]
name = "grok-overlay"
version = "1.0.0"
description = "A lightweight Grok overlay for macOS and Windows powered by Tauri 2"
authors = ["grok-overlay contributors"]
edition = "2021"

[lib]
name = "grok_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "NSButton",
  "NSControl",
  "NSResponder",
  "NSView",
  "NSWindow",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSGeometry",
  "NSString",
] }
